Add html for Services

--- a/index.html
+++ b/index.html
@@ -30,11 +30,39 @@
             <div class="splash-inner">
                 <h2>Welcome To Our Studio!</h2>
                 <h1>IT'S NICE TO MEET YOU</h1>
-                <a href="#" class="btn btn-one">TELL ME MORE</a>
+                <a href="#" class="btn">TELL ME MORE</a>
             </div>
         </header>
 
-        <secition class="Services"></secition>
+        <secition class="Services">
+            <h3>SERVICES</h3>
+            <h5>Cras tristique et metus non aliquam.</h5>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="list-group">
+                            <a href="#" class="icon"><i class="fas fa-shopping-basket"></i></a>
+                            <h5>E-Commerce</h5>
+                            <p>Etiam vel elit vitae orci iaculis pulvinar. Vestibulum in justo mollis, pulvinar urna sit amet, pretium sem.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="list-group">
+                            <a href="#" class="icon"><i class="fas fa-laptop-code"></i></a>
+                            <h5>E-Commerce</h5>
+                            <p>Etiam vel elit vitae orci iaculis pulvinar. Vestibulum in justo mollis, pulvinar urna sit amet, pretium sem.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="list-group">
+                            <a href="#" class="icon"><i class="fas fa-unlock-alt"></i></a>
+                            <h5>E-Commerce</h5>
+                            <p>Etiam vel elit vitae orci iaculis pulvinar. Vestibulum in justo mollis, pulvinar urna sit amet, pretium sem.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </secition>
         <section class="Portfolio"></section>
         <section class="footer"></section>
     </body>
