Add style for Services

--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
                     <div class="col-md-4">
                         <div class="list-group">
                             <a href="#" class="icon"><i class="fas fa-shopping-basket"></i></a>
-                            <h5>E-Commerce</h5>
+                            <h4>E-Commerce</h4>
                             <p>Etiam vel elit vitae orci iaculis pulvinar. Vestibulum in justo mollis, pulvinar urna sit amet, pretium sem.</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="list-group">
                             <a href="#" class="icon"><i class="fas fa-laptop-code"></i></a>
-                            <h5>E-Commerce</h5>
+                            <h4>Responsive Web</h4>
                             <p>Etiam vel elit vitae orci iaculis pulvinar. Vestibulum in justo mollis, pulvinar urna sit amet, pretium sem.</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="list-group">
                             <a href="#" class="icon"><i class="fas fa-unlock-alt"></i></a>
-                            <h5>E-Commerce</h5>
+                            <h4>Web Security</h4>
                             <p>Etiam vel elit vitae orci iaculis pulvinar. Vestibulum in justo mollis, pulvinar urna sit amet, pretium sem.</p>
                         </div>
                     </div>
