Add html for footer

--- a/index.html
+++ b/index.html
@@ -64,7 +64,17 @@
             </div>
         </secition>
         <section class="Portfolio"></section>
-        <section class="footer"></section>
+        <section class="footer">
+            <div class="container">
+                <ul>
+                    <li>Copyright 2014 FreebiesXpress.com</li>
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-facebook-f"></i></li>
+                    <li><i class="fab fa-pinterest-p"></i></li>
+                    <li><i class="fab fa-google-plus-g"></i></li>
+                </ul>
+            </div>
+        </section>
     </body>
          
 </html>
