Add style for footer

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <section class="Portfolio"></section>
         <section class="footer">
             <div class="container">
-                <ul>
+                <ul class="icon-footer">
                     <li>Copyright 2014 FreebiesXpress.com</li>
-                    <li><i class="fab fa-twitter"></i></li>
-                    <li><i class="fab fa-facebook-f"></i></li>
-                    <li><i class="fab fa-pinterest-p"></i></li>
-                    <li><i class="fab fa-google-plus-g"></i></li>
+                    <li class="icons"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li class="icons"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li class="icons"><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                    <li class="icons"><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                 </ul>
             </div>
         </section>
