Add style for btn-one

--- a/index.html
+++ b/index.html
@@ -69,34 +69,46 @@
             <h5>Sed ultricies a lorem ac blandit.</h5>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col">
                         <div class="portfolio-content">
                             <img src="https://images.pexels.com/photos/1164985/pexels-photo-1164985.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-                            <a href="#" class="btn-one">Ebony & Ivory<br>Branding</Branding></a>
+                            <div class="link">
+                                <a href="#" class="btn btn-one">Ebony & Ivory<br><span>Branding</span></Branding></a>
+                            </div>
                         </div>
                         <div class="portfolio-content">
-                            <img src="https://images.pexels.com/photos/1005644/pexels-photo-1005644.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-                            <a href="#" class="btn-one">Smart Stationary<br>Print Design</a>
+                            <img src="https://images.pexels.com/photos/1164985/pexels-photo-1164985.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                            <div class="link">
+                                <a href="#" class="btn btn-one">Smart Stationary<br><span>Design</span></a>
+                            </div>
                         </div>
                         <div class="portfolio-content">
-                            <img src="https://images.pexels.com/photos/1081685/pexels-photo-1081685.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-                            <a href="#" class="btn-one">Clever Poster<br>Print Design</a>
+                            <img src="https://images.pexels.com/photos/1164985/pexels-photo-1164985.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                            <div class="link">
+                                <a href="#" class="btn btn-one">Clever Poster<br><span>Print Design</span></a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col">
                         <div class="portfolio-content">
-                            <img src="https://images.pexels.com/photos/2340254/pexels-photo-2340254.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-                            <a href="#" class="btn-one">Vinyl Record<br>Product Mock-Up</a>
+                            <img src="https://images.pexels.com/photos/1164985/pexels-photo-1164985.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                            <div class="link">
+                                <a href="#" class="btn btn-one">Vinyl Record<br><span>Product Mock-Up</span></a>
+                            </div>
                         </div>
                         <div class="portfolio-content">
-                            <img src="https://images.pexels.com/photos/804269/pexels-photo-804269.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-                            <a href="#" class="btn-one">Treehouse Template<br>Web Design</a>
-                        </div>
+                            <img src="https://images.pexels.com/photos/1164985/pexels-photo-1164985.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                            <div class="link">
+                                <a href="#" class="btn btn-one">Treehouse Template<br><span>Design</span></a>
+                            </div>
+                            </div>
                         <div class="portfolio-content">
-                            <img src="https://images.pexels.com/photos/1964471/pexels-photo-1964471.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-                            <a href="#" class="btn-one">Burned Logo<br>Branding</a>
+                            <img src="https://images.pexels.com/photos/1164985/pexels-photo-1164985.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                            <div class="link">
+                                <a href="#" class="btn btn-one">Burned Logo<br><span>Branding</span></a>
+                            </div>
                         </div>
                     </div>
                 </div>
