--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <nav class="navigation">
                 <div class="container">
                     <ul>
-                        <li a href="#">Golden</li>
-                        <li a href="#">HOME</li>
-                        <li a href="#">SERVICES</li>
-                        <li a href="#">PORTFOLIO</li>
-                        <li a href="#">ABOUT</li>
-                        <li a href="#">CONTACT</li>
+                        <li><a href="#">Golden</a></li>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">SERVICES</a></li>
+                        <li><a href="#">PORTFOLIO</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">CONTACT</a></li>
                     </ul>
                 </div>
             </nav>
