Add style for portfolio

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <header class="splash"> 
             <nav class="navigation">
                 <div class="container">
+                    <a href="#" class="logo">Golden</a>
                     <ul>
-                        <li><a href="#">Golden</a></li>
                         <li><a href="#">HOME</a></li>
                         <li><a href="#">SERVICES</a></li>
                         <li><a href="#">PORTFOLIO</a></li>
@@ -73,7 +73,7 @@
                         <div class="portfolio-content">
                             <img src="https://images.pexels.com/photos/1164985/pexels-photo-1164985.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
                             <div class="link">
-                                <a href="#" class="btn btn-one">Ebony & Ivory<br><span>Branding</span></Branding></a>
+                                <a href="#" class="btn btn-one">Ebony & Ivory<br><span>Branding</span></a>
                             </div>
                         </div>
                         <div class="portfolio-content">
