--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <header class="splash"> 
             <nav class="navigation">
                 <div class="container">
-                    <a href="#" class="logo">Golden</a>
                     <ul>
+                        <li><a href="#" class="logo">Golden</a></li>
                         <li><a href="#">HOME</a></li>
                         <li><a href="#">SERVICES</a></li>
                         <li><a href="#">PORTFOLIO</a></li>
